# rust-distributed-programming

./: README.adoc
examples/grpc/rust-grpc/: Cargo.toml
examples/grpc/rust-grpc/proto/: notes.proto
examples/grpc/rust-grpc/src/: build.rs  client.rs  main.rs
grpc-example/go-grpc/: README.md  client.go  main.go  server.go
grpc-example/proto/: notes.proto
grpc-example/rust-grpc/: Cargo.toml  README.md  build.rs
grpc-example/rust-grpc/src/: client.rs  server.rs
