[package]
name = "rust-grpc"
version = "0.1.0"
authors = ["joham <mail@joham.dev>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.3"
prost = "0.6"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "0.2", features = ["macros", "sync", "stream", "time"] }

async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"

[build-dependencies]
tonic-build = "0.3"

[[bin]]
name = "noticeboard-server"
path = "src/server.rs"

[[bin]]
name = "noticeboard-client"
path = "src/client.rs"